--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "start": "next start",
     "lint": "eslint",
     "seed": "tsx scripts/seed.ts",
-    "seed-api": "node scripts/seed-api.js"
+    "seed-api": "node scripts/seed-api.js",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "face-api.js": "^0.22.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "mongoose": "^9.0.1",
     "motion": "^12.23.25",
     "next": "16.0.7",
-    "postprocessing": "^6.38.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.167.1"
+    "three": "^0.181.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.7",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
