--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@splinetool/runtime": "^1.12.39",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "googleapis": "^170.1.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.17",
